fix language button being behind invisible box and not usable

--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,7 @@ to {
 
 #language-button{
     position: fixed;
+    z-index: 10;
     top: 5px;
     right: 10px;
     width: 70px;
